<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPerguntasActivity">

    <TextView
        android:id="@+id/text_view_perguntaApagar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/dig_pergunta"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_titulo" />

    <TextView
        android:id="@+id/text_view_resp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/dig_resp1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_perguntaApagar" />

    <TextView
        android:id="@+id/text_view_resp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="38dp"
        android:text="@string/dig_resp2"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_resp1" />

    <TextView
        android:id="@+id/text_view_resp3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="38dp"
        android:text="@string/dig_resp3"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_resp2" />

    <TextView
        android:id="@+id/text_view_resp5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/dig_resp5"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_resp4" />

    <TextView
        android:id="@+id/text_view_resp4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="38dp"
        android:text="@string/dig_resp4"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_resp3" />

    <TextView
        android:id="@+id/text_view_titulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txt_add_perg"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_pergunta"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="13dp"
        android:ems="10"
        android:hint="@string/edit_pergunta"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_view_perguntaApagar"
        app:layout_constraintTop_toBottomOf="@+id/text_view_titulo" />

    <EditText
        android:id="@+id/edit_text_resposta1"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/dig_resposta"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/text_view_resp1"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_pergunta" />

    <EditText
        android:id="@+id/edit_text_resposta2"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/dig_resposta"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/text_view_resp3"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_resposta1" />

    <EditText
        android:id="@+id/edit_text_resposta3"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/dig_resposta"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/text_view_resp4"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_resposta2" />

    <EditText
        android:id="@+id/edit_text_resposta4"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/dig_resposta"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/text_view_resp4"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_resposta3" />

    <EditText
        android:id="@+id/edit_text_respostaCerta"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/dig_resposta"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/text_view_resp5"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_resposta4" />

    <Button
        android:id="@+id/btn_salva_pergunta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="adicionaPergunta"
        android:text="@string/btn_salvar"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_respostaCerta" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_salva_pergunta"
        app:srcCompat="@drawable/hamburguer" />

</androidx.constraintlayout.widget.ConstraintLayout>